--- a/internal/templates/keyboard/partials/inline_form.html
+++ b/internal/templates/keyboard/partials/inline_form.html
@@ -58,9 +58,9 @@
         </div>
     </form>
     <p class="text-xs text-slate-500 mt-1">
-        <kbd class="px-1 bg-slate-100 rounded">↓</kbd> select suggestion
-        <kbd class="px-1 bg-slate-100 rounded ml-2">Tab</kbd> next field
-        <kbd class="px-1 bg-slate-100 rounded ml-2">Enter</kbd> save
+        <kbd class="font-mono text-xs px-1.5 py-0.5 bg-slate-100 border border-slate-300 rounded text-slate-700">↓</kbd> select suggestion
+        <kbd class="font-mono text-xs px-1.5 py-0.5 bg-slate-100 border border-slate-300 rounded text-slate-700 ml-2">Tab</kbd> next field
+        <kbd class="font-mono text-xs px-1.5 py-0.5 bg-slate-100 border border-slate-300 rounded text-slate-700 ml-2">Enter</kbd> save
     </p>
 </div>
 <script>
