--- a/internal/templates/keyboard/partials/job_form.html
+++ b/internal/templates/keyboard/partials/job_form.html
@@ -21,8 +21,8 @@
         </button>
     </form>
     <p class="text-xs text-slate-500 mt-1 ml-6">
-        <kbd class="px-1 bg-slate-100 rounded">Enter</kbd> create
-        <kbd class="px-1 bg-slate-100 rounded ml-2">Escape</kbd> cancel
+        <kbd class="font-mono text-xs px-1.5 py-0.5 bg-slate-100 border border-slate-300 rounded text-slate-700">Enter</kbd> create
+        <kbd class="font-mono text-xs px-1.5 py-0.5 bg-slate-100 border border-slate-300 rounded text-slate-700 ml-2">Escape</kbd> cancel
     </p>
 </div>
 {{end}}
